# guess_card_bot

./: .env  .gitignore  Procfile  README.md  pyproject.toml
game/: bot.py  main.py
game/games/: guess_denomination.py  guess_hue.py  guess_suit.py
game/handlers/: commence.py  game_router.py  guess_denomination.py  guess_hue.py  guess_suit.py  ready_checker.py
