[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = ""
authors = ["VadimK <yaralavadim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytelegrambotapi = "^4.14.0"
python-dotenv = "^1.0.0"
python-telegram-bot = "^20.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
